// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthService Should return a token when user login 1`] = `
Object {
  "data": Object {
    "token": "123.123.123",
  },
  "errors": null,
}
`;

exports[`AuthService Should return an user when user register 1`] = `
Object {
  "data": Object {
    "email": "igor@igor.me",
    "name": "Igor",
    "password": "1234",
  },
  "errors": null,
}
`;

exports[`AuthService Should throw an error when there's not network 1`] = `
Object {
  "data": undefined,
  "errors": Object {
    "status": 404,
    "statusText": "Not Found",
  },
}
`;
